import HomeScreen from "./Home/HomeScreen";
import ProductScreen from "./Home/ProductScreen";
import CartScreen from "./Cart/CartScreen";
import ProfileScreen from "./Profile/ProfileScreen";
import WishlistScreen from "./Wishlist/WishlistScreen";

export {
    HomeScreen,
    ProductScreen,
    CartScreen,
    ProfileScreen,
    WishlistScreen
}