...
    if (!product)
        return <ActivityIndicator color={theme.mainColor} size='large'/>
    return (
        <View style={{flex: 1}} testID='ProductScreen'>
            <TopBar/>
            <SearchBar/>
            <ScrollView ref={ref} style={{paddingLeft: 8, paddingRight: 8}} contentContainerStyle={{paddingBottom: 20}} testID='productScroll'>

                <View testID={'productImage'}>
                    <Lightbox ref={lighboxRef} testID={'lightbox'}>
                        <FastImage source={{uri: product.imageURL}} style={s.image} resizeMode='contain'/>
                    </Lightbox>
                    <MaterialIcons name='fullscreen' size={28} style={s.fullscreenIcon} onPress={() => lighboxRef.current?.open()} testID='openImage'/>
                </View>

                <>
                    <Text style={s.info}>{product.title}</Text>
                    <Text style={[s.info, {fontWeight: 'normal', marginTop: 0}]}>AED {product.price}</Text>
                </>
...
